syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";

package CareerCloud.gRPC;

import "google/protobuf/empty.proto";

service CompanyDescription{
	rpc ReadCompanyDescription (CompanyDescriptionIdRequest) returns (CompanyDescriptionPayload);
	rpc GetAllCompanyDescription (google.protobuf.Empty) returns (AllCompanyDescriptionPayload);
	rpc CreateCompanyDescription (CompanyDescriptionPayload) returns (google.protobuf.Empty);
	rpc UpdateCompanyDescription (CompanyDescriptionPayload) returns (google.protobuf.Empty);
	rpc DeleteCompanyDescription (CompanyDescriptionPayload) returns (google.protobuf.Empty);
}

message CompanyDescriptionIdRequest{
	string Id =1;
}

message CompanyDescriptionPayload {
	string Id = 1;
	string Company = 2;
	string LanguageId = 3;
	string CompanyName = 4;
	string CompanyDescription = 5;	
}

message AllCompanyDescriptionPayload {
	repeated CompanyDescriptionPayload CompanyDescriptions = 1;
}